--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,15 @@ android {
         viewBinding = true
     }
 
+    // 自定义打包名称
+    android.applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach {
+            //buildType.name构建类型、versionName版本名
+            outputFileName = "A Galaxy_${buildType.name}_v${versionName}.apk"
+        }
+    }
+
+
 }
 
 dependencies {
