--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     def rxJava2_version = "2.2.21"
     def rxAndroid2_version = "2.1.1"
 
+    // alerter
+    implementation 'com.github.tapadoo:alerter:7.2.4'
     //smartRefresh
 //    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
 //    api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.2'
